# Jack

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_jack.py
.github/workflows/: deploy.yml
deploy/: deploy.ps1  setup-oracle.sh  test-api.ps1
examples/: basic_usage.py
jack/: __init__.py  __main__.py
jack/adapters/: __init__.py  base.py  factory.py  linux.py  macos.py  windows.py
jack/core/: __init__.py  code_loop.py  executor.py  jack_brain.py  memory.py  verifier.py
jack/foundation/: __init__.py  action.py  brain_reasoner.py  demo.py  llm.py  loop.py  memory.py  perceive.py  plan.py  reason.py  retrieve.py  robust.py  state.py  types.py  verified_executor.py  verify.py
jack/foundation/tests/: __init__.py  test_integration.py
jack/interfaces/: __init__.py  cli.py
jack/network/: __init__.py  discovery.py  node.py  protocol.py
jack/server/: __init__.py  app.py  auth.py  config.py  sandbox.py
jack/server/middleware/: __init__.py  logging.py  security.py
jack/server/routes/: __init__.py  database.py
jack/server/tests/: __init__.py  test_api.py  test_auth.py  test_sandbox.py
jack/training/: __init__.py  phase0_digital.py  train_transformer.py
jack/vision/: __init__.py  control.py  screen.py  understanding.py
